infra/k8s/apps/trip-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: trip-service
  labels:
    app: trip-service
spec:
  selector:
    app: trip-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
  type: ClusterIP
